// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/forms/Dropdown should be open-able 1`] = `
.c4 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  display: block;
  width: 100%;
  border: none;
  outline: none;
  cursor: pointer;
}

.c2 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-right: 5px;
  background: #f0f0f0;
}

.c2:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c2:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c2:disabled {
  color: #c0c0c0;
}

.c6 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  background: #f0f0f0;
}

.c6:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c6:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c6:disabled {
  color: #c0c0c0;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

.c5 {
  list-style-type: none;
  position: absolute;
  top: 100%;
  left: 0;
  min-width: 160px;
  border: 1px solid #c0c0c0;
  background: #f0f0f0;
  z-index: 10000;
}

.c7 {
  width: 100%;
  text-align: left;
  white-space: nowrap;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
      type="button"
    >
      <span
        class="c3"
      >
        Item 1
      </span>
      <i
        class="c4"
      >
        ˄
      </i>
    </button>
    <ul
      class="c5"
    >
      <li
        class=""
      >
        <button
          class="c1 c6 c7"
          type="button"
        >
          <span
            class="c3"
          >
            Item 1
          </span>
        </button>
      </li>
      <li
        class=""
      >
        <button
          class="c1 c6 c7"
          type="button"
        >
          <span
            class="c3"
          >
            Item 2
          </span>
        </button>
      </li>
      <li
        class=""
      >
        <button
          class="c1 c6 c7"
          type="button"
        >
          <span
            class="c3"
          >
            Item 3
          </span>
        </button>
      </li>
    </ul>
  </div>
</div>
`;

exports[`components/forms/Dropdown should render correctly 1`] = `
.c4 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: block;
  width: 20px;
  height: 20px;
  line-height: 20px;
  font-style: normal;
  text-align: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  display: block;
  width: 100%;
  border: none;
  outline: none;
  cursor: pointer;
}

.c2 {
  font-family: Open Sans,Arial,sans-serif;
  color: #222;
  font-size: 14px;
  line-height: 20px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: auto;
  padding: 5px 10px;
  padding-right: 5px;
  background: #f0f0f0;
}

.c2:hover:not(:disabled) {
  background-color: #e0e0e0;
}

.c2:focus {
  outline: 1px dotted #222;
  outline-offset: -1px;
}

.c2:disabled {
  color: #c0c0c0;
}

.c3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c0 {
  position: relative;
  display: inline-block;
}

<div>
  <div
    class="c0"
  >
    <button
      class="c1 c2"
      type="button"
    >
      <span
        class="c3"
      >
        Item 1
      </span>
      <i
        class="c4"
      >
        ˅
      </i>
    </button>
  </div>
</div>
`;
